@@ -16,6 +16,7 @@
             <artifactId>api</artifactId>
         </dependency>
         
+        <!-- https://issues.apache.org/jira/browse/MDEP-613 -->
         <dependency>
             <groupId>javax.validation</groupId>
             <artifactId>validation-api</artifactId>
@@ -40,26 +41,16 @@
             <artifactId>assertj-core</artifactId>
         </dependency>
     </dependencies>
-    
+
     <build>
         <plugins>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <configuration>
-                    <compilerArgs>
-                        <arg>--add-modules=org.assertj.core,org.junit.jupiter.api</arg>
-                    </compilerArgs>
-                </configuration>
-            </plugin>
-            
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <configuration>
                     <argLine>
-                        --add-opens=org.n52.huddle.modules.impl/org.n52.huddle.jdk9.modules.impl.bavarian=ALL-UNNAMED
-                        --add-opens=org.n52.huddle.modules.impl/org.n52.huddle.jdk9.streams=ALL-UNNAMED
+                        --add-opens=impl_module/org.n52.huddle.jdk9.modules.impl.bavarian=ALL-UNNAMED
+                        --add-opens=impl_module/org.n52.huddle.jdk9.streams=ALL-UNNAMED
                     </argLine>
                 </configuration>
             </plugin>
